[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
chrono = "0.4"
libbpf-rs = "0.12.0"
libc = "0.2"
plain = "0.2"
structopt = "0.3"
actix-web = "4"
prometheus = "0.13.0"
tokio = { version = "1.17.0", features = ["full"] }

[build-dependencies]
libbpf-cargo = "0.9"

[[bin]]
name = "bpft"
path = "src/bin/main.rs"
